# msu_supercomputing_academy

./: .gitignore  CMakeLists.txt  README.md
day1/: Makefile  task1.c
mpi/: CMakeLists.txt
mpi/src/: matrix_production_my.cpp  matrix_production_pdgemm.cpp  task2.c  task3.cpp  task4.cpp
openmp/: omp2.c
src/: omp1.cpp  task1.c  task2.c  task3.cpp  task4.cpp  task5.cpp
